--- a/src/components/Steps/Steps.module.css
+++ b/src/components/Steps/Steps.module.css
@@ -17,6 +17,8 @@
   text-align: center;
   margin-bottom: 60px;
   text-transform: uppercase;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 .steps_div {
@@ -31,6 +33,8 @@
   animation: fadeIn 3s ease-in forwards;
   position: relative;
   display: flex;
+  align-items: center;
+
   flex-direction: column;
   /* border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -45,20 +49,33 @@
 } */
 .image {
   width: 100%;
-  height: 200px;
+  height: 100%;
   border-radius: 10%;
+  object-fit: cover;
+}
+
+.image_div {
+  width: 90%; /* Set the desired width for your image container */
+  height: 200px; /* Set the desired height for your image container */
+  overflow: hidden; /* Hide any overflow if the image is larger than the container */
+
+  /* Set the aspect ratio for the container */
+  /* You can adjust this to maintain your desired aspect ratio */
+  aspect-ratio: 3/2; /* Width divided by Height (e.g., 300px / 200px = 3/2) */
 }
 .description {
-  margin-top: 60px;
+  margin-top: 0px;
   font-size: 20px;
   text-align: center;
   padding: 0px 10px;
+  text-wrap: wrap;
 }
 .number {
-  position: absolute; /* Absolute positioning */
-  top: 180px; /* Adjust the top position to place it above the image */
-  left: 50%; /* Center horizontally */
-  transform: translateX(-50%); /* Center horizontally */
+  align-self: center;
+  /* position: absolute; */
+  /* top: 180px; 
+  left: 50%;  */
+  transform: translateY(-50%); /* Center horizontally */
   width: 70px; /* Set the width and height to create a circle */
   height: 70px;
   background-color: #c51c1c; /* Background color for the circle */
@@ -101,18 +118,31 @@
     transform: translateY(0);
   }
 }
-@media (max-width: 991px) {
+@media (max-width: 1199px) {
   .steps_div {
     flex-direction: column;
     align-items: center;
-    row-gap: 40px;
+    row-gap: 60px;
+    justify-items: center;
   }
-  .image_div {
+  /* .image_div {
     width: 80%;
     margin: auto;
-  }
-  .card {
+  } */
+  /* .card {
+    
     animation: none;
     width: 90%;
+  } */
+}
+@media (max-width: 768px) {
+  .card {
+    width: 300px;
+  }
+}
+
+@media (max-width: 396px) {
+  .card {
+    width: 95%;
   }
 }
